--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport"
-		      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Frontend Mentor | Product preview card component</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
@@ -25,14 +25,14 @@
 						<p>Perfume</p>
 						<h2>Gabrielle essence eau de parfum</h2>
 					</header>
-					<main>
+					<div class="main">
 						<p> A floral, solar and voluptuous interpretation composed by Olivier Polge,
 						    Perfumer-Creator for the House of CHANEL.</p>
 						<div class="price-container">
 							<p>&dollar;149.99</p>
 							<span>&dollar;169.99</span>
 						</div>
-					</main>
+					</div>
 					<a class="button" href="#">
 						<img src="./images/icon-cart.svg" alt="cart svg">
 						Add to Cart
